--- a/Book_O_Series/Book_O_Series.Android/Book_O_Series.Android.csproj
+++ b/Book_O_Series/Book_O_Series.Android/Book_O_Series.Android.csproj
@@ -78,6 +78,9 @@
       <HintPath>..\..\packages\Plugin.Share.5.0.0\lib\MonoAndroid10\Plugin.Share.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="mscorlib"> 
+      <Private>False</Private> 
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
